# LinuxApplicationDevelopment2023

01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  etalon2.txt  range.c  test1.txt  test2.txt
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  move.c  protect.c
07_Environmental/: CMakeLists.txt  README.md  rhasher.c
08_I18n/: CMakeLists.txt  I18n.c  README.md  ru.po
10_Testing/: Makefile.am  Readme.md  configure.ac
10_Testing/src/: Makefile.am  buf.h  libbuf.c
10_Testing/tests/: Makefile.am  tests.ts
11_Documenting/: CMakeLists.txt  Doxyfile.in  I18n.c  README.md  ru.po
